acabado, falta arreglar diseño

--- a/mi-proyecto/src/app/components/footer/footer.component.html
+++ b/mi-proyecto/src/app/components/footer/footer.component.html
@@ -1,1 +1,4 @@
-<p>footer works!</p>
+<footer class="bg-dark text-white text-center py-3 mt-5">
+    <p>&copy; 2024 Portal de empleo. Todos los derechos reservados.</p>
+  </footer>
+  
