--- a/mi-proyecto/src/app/components/header/header.component.html
+++ b/mi-proyecto/src/app/components/header/header.component.html
@@ -1,1 +1,13 @@
-<p>header works!</p>
+<header class="bg-dark text-white py-3">
+    <nav class="container">
+      <ul class="nav justify-content-center">
+        <li class="nav-item">
+          <a class="nav-link text-white" [routerLink]="['job-application']">Buscar empleo</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" [routerLink]="['job-offer']">Registrar oferta de empleo</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  
