--- a/mi-proyecto/src/app/components/jobofferform/jobofferform.component.html
+++ b/mi-proyecto/src/app/components/jobofferform/jobofferform.component.html
@@ -1,1 +1,60 @@
-<p>jobofferform works!</p>
+<div class="container mt-5">
+  <h1 class="text-center mb-4">Formulario para agregar ofertas de empleo</h1>
+  <form>
+    <div class="mb-3">
+      <label for="tituloOferta" class="form-label">Título:</label>
+      <input type="text" id="tituloOferta" class="form-control" placeholder="Ej. Buscamos desarrollador JAVA Junior" required>
+    </div>
+
+    <div class="mb-3">
+      <label for="descripcionOferta" class="form-label">Descripción:</label>
+      <input type="text" id="descripcionOferta" class="form-control" placeholder="Descripción de la oferta" required>
+    </div>
+
+    <div class="mb-3">
+      <label for="tipoOferta" class="form-label">Tipo de oferta:</label>
+      <select id="tipoOferta" class="form-select" required>
+        <option value="Tiempo completo">Jornada completa</option>
+        <option value="Medio tiempo">Media jornada</option>
+        <option value="Freelance">Freelance</option>
+      </select>
+    </div>
+
+    <div class="mb-3">
+      <label for="sectorOferta" class="form-label">Sector:</label>
+      <select id="sectorOferta" class="form-select" required>
+        <option value="Restauracion">Restauración</option>
+        <option value="Tech">Tech/Informática</option>
+        <option value="Agrario">Agrario</option>
+      </select>
+    </div>
+
+    <div class="mb-3">
+      <label for="experienciaOferta" class="form-label">Experiencia requerida:</label>
+      <select id="experienciaOferta" class="form-select" required>
+        <option value="Menos de 1 año">Menos de 1 año</option>
+        <option value="1 a 3 años">1 a 3 años</option>
+        <option value="4 a 5 años">4 a 5 años</option>
+        <option value="Más de 5 años">Más de 5 años</option>
+      </select>
+    </div>
+
+    <div class="mb-3">
+      <label for="ubicacionOferta" class="form-label">Ubicación:</label>
+      <select id="ubicacionOferta" class="form-select" required>
+        <option value="Valencia">Valencia</option>
+        <option value="Madrid">Madrid</option>
+        <option value="Barcelona">Barcelona</option>
+      </select>
+    </div>
+
+    <div class="mb-3">
+      <label for="salarioOferta" class="form-label">Salario:</label>
+      <input type="text" id="salarioOferta" class="form-control" placeholder="Ej. 1500" required>
+    </div>
+
+    <div class="text-center">
+      <button type="button" class="btn btn-primary" onclick="agregarOferta()">Agregar Oferta</button>
+    </div>
+  </form>
+</div>
