--- a/mi-proyecto/src/app/components/header/header.component.html
+++ b/mi-proyecto/src/app/components/header/header.component.html
@@ -1,13 +1,34 @@
-<header class="bg-dark text-white py-3">
-    <nav class="container">
-      <ul class="nav justify-content-center">
-        <li class="nav-item">
-          <a class="nav-link text-white" [routerLink]="['job-application']">Buscar empleo</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white" [routerLink]="['job-offer']">Registrar oferta de empleo</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
-  
+<header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-around py-3 px-4 mb-4 border-bottom">
+  <!-- <a class="d-flex align-items-center col-md-3 mb-2 mb-md-0"></a> -->
+
+  <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0 nav-pills" id="pills-tab" role="tablist">
+    <li class="nav-item">
+      <a class="nav-link text-white" 
+         id="job-application-tab" 
+         data-bs-toggle="pill" 
+         [routerLink]="['job-application']" 
+         role="tab" 
+         aria-controls="pills-job-application" 
+         aria-selected="true">
+         Buscar empleo
+      </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link text-white" 
+         id="job-offer-tab" 
+         data-bs-toggle="pill" 
+         [routerLink]="['job-offer']" 
+         role="tab" 
+         aria-controls="pills-job-offer" 
+         aria-selected="false">
+         Registrar oferta de empleo
+      </a>
+    </li>
+  </ul>
+
+<!--   <div class="col-md-3 text-end">
+    <button type="button" class="btn btn-outline-warning me-2">Login</button>
+    <button type="button" class="btn btn-warning">Sign-up</button>
+  </div> -->
+
+</header>
