--- a/mi-proyecto/src/styles.css
+++ b/mi-proyecto/src/styles.css
@@ -1,1 +1,37 @@
-/* You can add global styles to this file, and also import other style files */
+main{
+    min-height: 90vh;
+}
+
+form{
+    margin: 5vh auto;
+    width: 60%;
+    max-width: 30rem;
+    min-width: fit-content;
+}
+
+.form-control:focus, .form-select:focus {
+    box-shadow: 0 0 0 0.15rem rgba(255, 193, 7, 1); 
+}
+
+.nav-pills .nav-link {
+    color: white; /* Texto blanco predeterminado */
+    background-color: transparent; /* Fondo transparente */
+    border-radius: 0.5rem;
+    margin: 0.1vw;
+    transition: background-color 0.3s, color 0.3s;
+  }
+
+  .nav-pills .nav-link:hover {
+    background-color: rgba(255, 255, 255, 0.082); /* Fondo translúcido en hover */
+    color: #ffc107 !important; /* Texto amarillo en hover */
+  }
+  
+  .nav-pills .nav-link.active {
+    background-color: #ffc107;
+    font-weight: 600;
+    color: rgb(49, 46, 46) !important ; /* Fondo amarillo */
+  }
+  
+  .btn, .nav-pills .nav-link{
+    font-weight: 600;
+  }
