--- a/mi-proyecto/src/app/components/header/header.component.html
+++ b/mi-proyecto/src/app/components/header/header.component.html
@@ -6,7 +6,7 @@
       <a class="nav-link text-white" 
          id="job-application-tab" 
          data-bs-toggle="pill" 
-         [routerLink]="['job-application']" 
+         [routerLink]="['offers']" 
          role="tab" 
          aria-controls="pills-job-application" 
          aria-selected="true">
@@ -17,7 +17,7 @@
       <a class="nav-link text-white" 
          id="job-offer-tab" 
          data-bs-toggle="pill" 
-         [routerLink]="['job-offer']" 
+         [routerLink]="['offer-form']" 
          role="tab" 
          aria-controls="pills-job-offer" 
          aria-selected="false">
