--- a/mi-proyecto/src/app/components/jobapplicationform/jobapplicationform.component.html
+++ b/mi-proyecto/src/app/components/jobapplicationform/jobapplicationform.component.html
@@ -14,7 +14,7 @@
       <div class="mb-3">
         <label for="sectorDemanda" class="form-label">Sector:</label>
         <select id="sectorDemanda" class="form-select bg-secondary text-light border-0" required>
-          <option value="Tech">Tech/Informática</option>
+          <option value="Tech/Informática">Tech/Informática</option>
           <option value="Educación">Educación</option>
           <option value="Restauración">Restauración</option>
         </select>
@@ -23,8 +23,8 @@
       <div class="mb-3">
         <label for="tipoDemanda" class="form-label">Tipo de empleo:</label>
         <select id="tipoDemanda" class="form-select bg-secondary text-light border-0" required>
-          <option value="Jornada completa">Jornada completa</option>
-          <option value="Media jornada">Media jornada</option>
+          <option value="Jornada Completa">Jornada completa</option>
+          <option value="Media Jornada">Media jornada</option>
           <option value="Freelance">Freelance</option>
         </select>
       </div>
