--- a/mi-proyecto/src/app/components/jobapplications/jobapplications.component.html
+++ b/mi-proyecto/src/app/components/jobapplications/jobapplications.component.html
@@ -1,10 +1,10 @@
 <nav class="navbar-light">
     <!-- Link al formulario de demanda de empleo-->
-    <p class="text-light text-center">¿Quieres registrar uns oferta de empleo? <a
-            [routerLink]="['/application-form']" class="text-warning">¡Rellena este formulario!</a></p> <!-- añadir en ts -->
+    <p class="text-light text-center">¿Quieres registrar una oferta de empleo? <a
+            [routerLink]="['/offer-form']" class="text-warning">¡Rellena este formulario!</a></p>
 
     <!-- Formulario de búsqueda -->
-    <form class="d-flex search-bar align-items-start" [formGroup]="form" (ngSubmit)="buscarDemanda()"> <!-- añadir en ts -->
+    <form class="d-flex search-bar align-items-start" [formGroup]="form" (ngSubmit)="buscarDemanda()">
 
         <!-- Botón de filtros -->
         <div class="dropdown me-2">
@@ -16,31 +16,20 @@
 
             <div class="dropdown-menu p-3 filter-div bg-secondary text-light" aria-labelledby="filterDropdown">
                 <div class="row g-3">
-                    <!-- Filtro: Salario -->
-                    <div class="col-12 col-md-4 ">
-                        <label for="salaryFilter" class="form-label">Salario</label>
-                        <select class="form-select" id="salaryFilter" formControlName="salario">
-                            <option value="">Cualquiera</option>
-                            <option value="500">500€ - 1000€</option>
-                            <option value="1000">1000€ - 1500€</option>
-                            <option value="1500">1500€ - 2000€</option>
-                            <option value="2000">+2000€</option>
-                        </select>
-                    </div>
 
                     <!-- Filtro: Sector -->
-                    <div class="col-12 col-md-4">
+                    <div class="col-12 col-md-6">
                         <label for="sectorFilter" class="form-label">Sector</label>
                         <select class="form-select" id="sectorFilter" formControlName="sector">
                             <option value="">Cualquiera</option>
-                            <option value="Tech">Tech/Informática</option>
+                            <option value="Tech/Informática">Tech/Informática</option>
                             <option value="Educación">Educación</option>
                             <option value="Restauración">Restauración</option>
                         </select>
                     </div>
 
                     <!-- Filtro: Ubicación -->
-                    <div class="col-12 col-md-4">
+                    <div class="col-12 col-md-6">
                         <label for="locationFilter" class="form-label">Ubicación</label>
                         <select class="form-select" id="locationFilter" formControlName="ubicacion">
                             <option value="">Cualquiera</option>
@@ -55,8 +44,8 @@
                         <label for="scheduleFilter" class="form-label">Jornada</label>
                         <select class="form-select" id="scheduleFilter" formControlName="tipo">
                             <option value="">Cualquiera</option>
-                            <option value="Jornada completa">Jornada completa</option>
-                            <option value="Media jornada">Media jornada</option>
+                            <option value="Jornada Completa">Jornada completa</option>
+                            <option value="Media Jornada">Media jornada</option>
                             <option value="Freelance">Freelance</option>
                         </select>
                     </div>
@@ -73,6 +62,11 @@
                         </select>
                     </div>
 
+                    <div class="col-12 d-flex justify-content-md-around">
+                        <button class="col-5 btn btn-outline-light" type="button" (click)="limpiarFiltros()">Limpiar Filtros</button>
+                        <button class="col-5 btn btn-outline-light" type="submit" (click)="buscarDemanda()">Buscar</button>
+                    </div>
+                    
                 </div>
             </div>
 
@@ -80,30 +74,36 @@
 
         <!-- Barra de búsqueda -->
         <input class="form-control me-2 bg-secondary text-light border-secondary" type="search"
-            placeholder="Ej. Programador Java" aria-label="Search" formControlName="titulo" />
+            placeholder="Ej. Programador Java" aria-label="Search" formControlName="descripcion" />
 
         <!-- Botón de búsqueda -->
         <button class="btn btn-outline-warning" type="submit">Buscar</button>
     </form>
 </nav>
 
-<!-- Aquí tienen que salir las demandas que cumplan con los filtros, añadir en ts!! y cambiar nombre -->
-<div class="container">
-    <h3 class="text-warning mb-3 mx-2">Demandas encontradas: </h3>
+<!-- Aquí tienen que salir las demandas que cumplan con los filtros -->
+<div class="container" *ngIf="totalDemandas > 0">
+    <h3 class="text-warning mb-3 mx-2">Demandas encontradas: {{ totalDemandas }}</h3>
     <div class="row">
-        <div class="col-lg-6" *ngFor="let oferta of filteredOffers">
+        <div class="col-lg-6" *ngFor="let demanda of filteredApplications">
             <div class="card m-1 border-secondary">
                 <div class="card-body offer-card bg-secondary">
-                    <h5 class="card-title text-warning">{{ oferta.titulo }}</h5>
-                    <h6 class="card-subtitle mb-2 text-light">{{ oferta.ubicacion }} | {{ oferta.tipo }} | {{
-                        oferta.sector }}</h6>
-                    <p class="card-text text-dark mt-4"><strong>Descripción de la oferta: </strong> {{
-                        oferta.descripcion }}</p>
-                    <p class="card-text text-dark"><strong>Experiencia requerida: </strong> {{ oferta.experiencia }}</p>
-                    <p class="card-text text-dark"><strong>Salario: </strong> {{ oferta.salario }}€ / mes</p>
-                    <a href="#" class="btn btn-outline-warning">Inscribirme en la oferta</a>
+                    <h5 class="card-title text-warning">{{ demanda.nombre }}</h5>
+                    <h6 class="card-subtitle mb-2 text-light">{{ demanda.ubicacion }} | {{ demanda.tipo }} | {{
+                        demanda.sector }}</h6>
+                    <p class="card-text text-dark mt-4"><strong>Más información: </strong> {{
+                        demanda.descripcion }}</p>
+                    <p class="card-text text-dark"><strong>Experiencia: </strong> {{ demanda.experiencia }}</p>
+                    <a href="#" class="btn btn-outline-warning">Contactar con demandante</a>
                 </div>
             </div>
         </div>
+    </div>
+</div>
+
+<div *ngIf="totalDemandas === 0 && formSubmitted" class="container">
+    <h3 class="text-warning mb-3 mx-1">No se han encontrado demandas con los filtros seleccionados.</h3>
+    <div class="col-12 d-flex justify-content-center">
+        <button class="col-4 btn btn-outline-warning justify-content-md-around" type="button" (click)="limpiarFiltros()">Limpiar Filtros</button>
     </div>
 </div>
