--- a/mi-proyecto/src/app/components/jobofferform/jobofferform.component.html
+++ b/mi-proyecto/src/app/components/jobofferform/jobofferform.component.html
@@ -14,8 +14,8 @@
     <div class="mb-3">
       <label for="tipoOferta" class="form-label">Tipo de oferta:</label>
       <select id="tipoOferta" class="form-select bg-secondary text-light border-0" required>
-        <option value="Tiempo completo">Jornada completa</option>
-        <option value="Media jornada">Media jornada</option>
+        <option value="Jornada Completa">Jornada completa</option>
+        <option value="Media Jornada">Media jornada</option>
         <option value="Freelance">Freelance</option>
       </select>
     </div>
@@ -23,7 +23,7 @@
     <div class="mb-3">
       <label for="sectorOferta" class="form-label">Sector:</label>
       <select id="sectorOferta" class="form-select bg-secondary text-light border-0" required>
-        <option value="Tech">Tech/Informática</option>
+        <option value="Tech/Informática">Tech/Informática</option>
         <option value="Educación">Educación</option>
         <option value="Restauracion">Restauración</option>
       </select>
