--- a/mi-proyecto/src/app/components/header/header.component.html
+++ b/mi-proyecto/src/app/components/header/header.component.html
@@ -2,6 +2,7 @@
   <!-- <a class="d-flex align-items-center col-md-3 mb-2 mb-md-0"></a> -->
 
   <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0 nav-pills" id="pills-tab" role="tablist">
+
     <li class="nav-item">
       <a class="nav-link text-white" 
          id="job-application-tab" 
@@ -10,20 +11,22 @@
          role="tab" 
          aria-controls="pills-job-application" 
          aria-selected="true">
-         Buscar empleo
+         Busco empleo
       </a>
     </li>
+
     <li class="nav-item">
       <a class="nav-link text-white" 
          id="job-offer-tab" 
          data-bs-toggle="pill" 
-         [routerLink]="['offer-form']" 
+         [routerLink]="['applications']" 
          role="tab" 
          aria-controls="pills-job-offer" 
          aria-selected="false">
-         Registrar oferta de empleo
+         Soy empleador
       </a>
     </li>
+    
   </ul>
 
 <!--   <div class="col-md-3 text-end">
