--- a/mi-proyecto/src/app/components/joboffers/joboffers.component.html
+++ b/mi-proyecto/src/app/components/joboffers/joboffers.component.html
@@ -32,7 +32,7 @@
                         <label for="sectorFilter" class="form-label">Sector</label>
                         <select class="form-select" id="sectorFilter" formControlName="sector">
                             <option value="">Cualquiera</option>
-                            <option value="Tech">Tech/Informática</option>
+                            <option value="Tech/Informática">Tech/Informática</option>
                             <option value="Educación">Educación</option>
                             <option value="Restauración">Restauración</option>
                         </select>
@@ -54,8 +54,8 @@
                         <label for="scheduleFilter" class="form-label">Jornada</label>
                         <select class="form-select" id="scheduleFilter" formControlName="tipo">
                             <option value="">Cualquiera</option>
-                            <option value="Jornada completa">Jornada completa</option>
-                            <option value="Media jornada">Media jornada</option>
+                            <option value="Jornada Completa">Jornada completa</option>
+                            <option value="Media Jornada">Media jornada</option>
                             <option value="Freelance">Freelance</option>
                         </select>
                     </div>
@@ -70,6 +70,11 @@
                             <option value="4 a 5 años">4 a 5 años</option>
                             <option value="Más de 5 años">Más de 5 años</option>
                         </select>
+                    </div>
+
+                    <div class="col-12 d-flex justify-content-md-around">
+                        <button class="col-5 btn btn-outline-light" type="button" (click)="limpiarFiltros()">Limpiar Filtros</button>
+                        <button class="col-5 btn btn-outline-light" type="submit" (click)="buscarOferta()">Buscar</button>
                     </div>
 
                 </div>
@@ -92,8 +97,8 @@
 </nav>
 
 <!-- Aquí tienen que salir las ofertas que cumplan con los filtros -->
-<div class="container">
-    <h3 class="text-warning mb-3 mx-2">Ofertas encontradas: </h3>
+<div *ngIf="totalOfertas > 0" class="container">
+    <h3 class="text-warning mb-3 mx-2">Ofertas encontradas: {{ totalOfertas }}</h3>
     <div class="row">
       <div class="col-lg-6" *ngFor="let oferta of filteredOffers">
         <div class="card m-1 border-secondary">
@@ -108,5 +113,12 @@
         </div>
       </div>
     </div>
-  </div>
+</div>
+
+<div *ngIf="totalOfertas === 0 && formSubmitted" class="container">
+    <h3 class="text-warning mb-3 mx-1">No se han encontrado ofertas con los filtros seleccionados.</h3>
+    <div class="col-12 d-flex justify-content-center">
+        <button class="col-4 btn btn-outline-warning justify-content-md-around" type="button" (click)="limpiarFiltros()">Limpiar Filtros</button>
+    </div>
+</div>
   
